@@ -127,9 +127,6 @@ samba_mkconf_cmd()
 		-v "concat('max protocol = ',//samba/maxprotocol)" -n \
 		-o "dns proxy = no" -n \
 		-o "# Settings to enhance performance:" -n \
-		-i "count(//samba/usesendfile) > 0" \
-			-o "use sendfile = yes" -n \
-		-b \
 		-o "strict locking = no" -n \
 		-o "read raw = yes" -n \
 		-o "write raw = yes" -n \
