@@ -71,7 +71,6 @@ $pconfig['sndbuf'] = $config['samba']['sndbuf'];
 $pconfig['rcvbuf'] = $config['samba']['rcvbuf'];
 $pconfig['enable'] = isset($config['samba']['enable']);
 $pconfig['largereadwrite'] = isset($config['samba']['largereadwrite']);
-$pconfig['usesendfile'] = isset($config['samba']['usesendfile']);
 $pconfig['easupport'] = isset($config['samba']['easupport']);
 $pconfig['storedosattributes'] = isset($config['samba']['storedosattributes']);
 $pconfig['createmask'] = !empty($config['samba']['createmask']) ? $config['samba']['createmask'] : "";
@@ -156,7 +155,6 @@ if ($_POST) {
 		$config['samba']['sndbuf'] = $_POST['sndbuf'];
 		$config['samba']['rcvbuf'] = $_POST['rcvbuf'];
 		$config['samba']['largereadwrite'] = isset($_POST['largereadwrite']) ? true : false;
-		$config['samba']['usesendfile'] = isset($_POST['usesendfile']) ? true : false;
 		$config['samba']['easupport'] = isset($_POST['easupport']) ? true : false;
 		$config['samba']['storedosattributes'] = isset($_POST['storedosattributes']) ? true : false;
 		if (!empty($_POST['createmask']))
@@ -178,11 +176,6 @@ if ($_POST) {
 			$config['samba']['aiorsize'] = $_POST['aiorsize'];
 			$config['samba']['aiowsize'] = $_POST['aiowsize'];
 			$config['samba']['aiowbehind'] = '';
-		}
-		if (($config['samba']['maxprotocol'] == "SMB2")
-		    || ($config['samba']['maxprotocol'] == "SMB3")) {
-			$config['samba']['usesendfile'] = false;
-			unset($pconfig['usesendfile']);
 		}
 
 		# Write additional parameters.
@@ -229,7 +222,6 @@ function enable_change(enable_change) {
 	document.iform.maxprotocol.disabled = endis;
 	document.iform.if.disabled = endis;
 	document.iform.largereadwrite.disabled = endis;
-	document.iform.usesendfile.disabled = endis;
 	document.iform.easupport.disabled = endis;
 	document.iform.storedosattributes.disabled = endis;
 	document.iform.createmask.disabled = endis;
@@ -419,7 +411,6 @@ function aio_change() {
               <?=gettext("Use the new 64k streaming read and write variant SMB requests introduced with Windows 2000.");?></span>
             </td>
           </tr>
-					<?php html_checkbox("usesendfile", gettext("Use sendfile"), !empty($pconfig['usesendfile']) ? true : false, gettext("Enable use sendfile."), gettext("This may make more efficient use of the system CPU's and cause Samba to be faster. Samba automatically turns this off for clients that use protocol levels lower than NT LM 0.12 and when it detects a client is Windows 9x."), false);?>
 					<tr>
 						<td width="22%" valign="top" class="vncell"><?=gettext("EA support");?></td>
 						<td width="78%" class="vtable">
